fix activity